--- a/wiki/ProjectGoals.wiki
+++ b/wiki/ProjectGoals.wiki
@@ -19,12 +19,12 @@ Por favor, adicionem seus nomes às metaheurísticas e aos problemas que ainda n
 
     * Problemas variados de otimização numérica (Marcelo/Paulo Moreno)
     * Particle Swarm Optimization para otimização numérica (Paulo Moreno)
+    * Genetic Algorithm para otimização numérica (Paulo Moreno)
 
 *Falta implementar:*
     * Tabu Search (Paulo Moreno)
     * Iterated Local Search
-    * Genetic Algorithm (Paulo Moreno)
-    * Particle Swarm Optimization para TSP
+    * Genetic Algorithm para TSP (Paulo Moreno)
 
     * Ant Colony Optimization
     * LK-opt para TSP (Marcelo)
