--- a/wiki/ProjectGoals.wiki
+++ b/wiki/ProjectGoals.wiki
@@ -26,7 +26,7 @@ Por favor, adicionem seus nomes às metaheurísticas e aos problemas que ainda n
     * Iterated Local Search
     * Genetic Algorithm para TSP (Paulo Moreno)
 
-    * Ant Colony Optimization
+    * Ant Colony Optimization (Lara)
     * Scatter Search
     * LK-opt para TSP (Marcelo)
     * Knapsack Problem
